# coreason_etl_pmda

./: .pre-commit-config.yaml  AGENTS.md  LICENSE  NOTICE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: index.md
src/coreason_etl_pmda/: __init__.py  config.py  main.py  pipeline.py  pipeline_full.py  sources_approvals.py  sources_jader.py  sources_jan.py  sources_package_inserts.py  sources_review_reports.py  transform_gold_approvals.py  transform_gold_jader.py  transform_silver.py  utils_date.py  utils_logger.py  utils_scraping.py  utils_text.py
src/coreason_etl_pmda/silver/: transform_silver_jader.py
src/coreason_etl_pmda/sources/: approvals.py  common.py  jader.py  jan.py  package_inserts.py  review_reports.py
src/coreason_etl_pmda/transformations/gold/: transform_gold_jader.py
src/coreason_etl_pmda/transformations/silver/: schemas.py  transform_silver.py  transform_silver_jader.py
src/coreason_etl_pmda/utils/: logger.py
tests/: test_binary_serialization.py  test_complex_cases.py  test_complex_scenarios.py  test_edge_cases.py  test_jader_gannen_logic.py  test_jader_zero_loss.py  test_main.py  test_pipeline.py  test_pipeline_complex.py  test_pipeline_full.py  test_sources_approvals.py  test_sources_approvals_complex.py  test_sources_approvals_excel.py  test_sources_jader.py  test_sources_jader_complex.py  test_sources_jan.py  test_sources_package_inserts.py  test_sources_review_reports.py  test_sources_review_reports_complex.py  test_transform_gold_approvals.py  test_transform_gold_jader.py  test_transform_gold_jader_complex.py  test_transform_silver.py  test_transform_silver_jader.py  test_transform_silver_jader_complex.py  test_utils_date.py  test_utils_scraping.py  test_utils_text.py
