[tool.poetry]
name = "coreason_etl_pmda"
version = "0.1.0"
description = "standardized data pipeline designed to ingest, normalize, and project regulatory data from Japan’s Pharmaceuticals and Medical Devices Agency (PMDA)"
authors = ["Gowtham A Rao <gowtham.rao@coreason.ai>"]
license = "Prosperity-3.0"
readme = "README.md"
packages = [{include = "coreason_etl_pmda", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12, <3.15"
loguru = "^0.7.2"
dlt = "^1.20.0"
pydantic = "^2.12.5"
polars = "^1.36.1"
duckdb = "^1.4.3"
openpyxl = "^3.1.5"
xlsx2csv = "^0.8.4"
beautifulsoup4 = "^4.14.3"
lxml = "^6.0.2"
pyarrow = "^22.0.0"
pydantic-settings = "^2.12.0"
tenacity = "^9.1.2"
ratelimit = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.4.8"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.26"
types-requests = "^2.32.4.20250913"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "coreason_etl_pmda"
version = "0.1.0"
description = "standardized data pipeline designed to ingest, normalize, and project regulatory data from Japan’s Pharmaceuticals and Medical Devices Agency (PMDA)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Gowtham A Rao", email = "gowtham.rao@coreason.ai" },
]
license = { file = "LICENSE" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason_etl_pmda"
Repository = "https://github.com/CoReason-AI/coreason_etl_pmda"
Documentation = "https://github.com/CoReason-AI/coreason_etl_pmda"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=100"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]
